Fixes the name (Liethof -> Liethoff)

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html class='no-js' lang='en'>
   <head>
     <meta charset='utf-8'>
-    <title>Robert Liethof</title>
-    <meta content='Robert Liethof - voice and movement training' name='description'>
+    <title>Robert Liethoff</title>
+    <meta content='Robert Liethoff - voice and movement training' name='description'>
     <meta content='voice movement training Berlin Amsterdam' name='keywords'>
-    <meta content='Robert Liethof' name='author'>
+    <meta content='Robert Liethoff' name='author'>
     <meta content='width=device-width initial-scale=1' name='viewport'>
     <meta content='True' name='HandheldFriendly'>
     <meta content='320' name='MobileOptimized'>
@@ -25,7 +25,7 @@
   <body>
     <header id='top'>
       <a href='#home'>
-        <h1>Rob Liethof</h1>
+        <h1>Rob Liethoff</h1>
         <h2>Voice and Movement Training</h2>
       </a>
     </header>
@@ -108,9 +108,9 @@
       <section id='contact'>
         <h1>Contact</h1>
         
-        <p>You can get in touch <a href="mailto:robliethof@gmail.com?subject=I%20would%20like%20more%20information">via email</a></p>
+        <p>You can get in touch <a href="mailto:rliethoff@gmail.com?subject=I%20would%20like%20more%20information">via email</a></p>
         
-        <p><img src="img/robliethof.jpg" alt="Rob Liethof"></p>
+        <p><img src="img/rliethoff.jpg" alt="Rob Liethof"></p>
       </section>
     </div>
     <script src='application.js'></script>
