Adds styles for in-paragraph images

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
           margin-top: 2.61792em;
           margin-bottom: 2.61792em;
           text-align: justify; }
+          p img {
+            float: left;
+            max-width: 40%;
+            padding: 0 1em 1em 0; }
         
         ul {
           list-style: circle; }
@@ -297,6 +301,7 @@
             color: #666; }
         
           #contact img {
+            float: none;
             max-width: 50%;
             display: block;
             margin: auto; } }
