Remove the degree blurb

--- a/index.html
+++ b/index.html
@@ -347,9 +347,8 @@
         <h1>Welcome</h1>
         
         <p>Robert Liethoff is an actor, director and voice movement teacher from
-        the Netherlands After finishing his acting school (degree in 2005
-        Acting Studio The Hague) he moved to Berlin and expanded his studies
-        in the field of dance and choreography.</p>
+        the Netherlands After finishing his acting school he moved to Berlin
+        and expanded his studies in the field of dance and choreography.</p>
         
         <p>From 2007 until recently he has been studying and working at the
         Lichtenberg Institute for advanced study in applied physiology of the
