--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             color: #666; }
         
           #contact img {
-            float: none;
+            float: none !important;
             max-width: 50%;
             display: block;
             margin: auto; } }
